Closed
Bug 401112
Opened 18 years ago
Closed 18 years ago
Filter invalidation problems
Categories
(Core :: SVG, defect, P3)
Core
SVG
Tracking
()
RESOLVED
FIXED
People
(Reporter: tor, Assigned: tor)
References
Details
Attachments
(6 files)
|
397 bytes,
image/svg+xml
|
Details | |
|
338 bytes,
image/svg+xml
|
Details | |
|
469 bytes,
image/svg+xml
|
Details | |
|
320 bytes,
image/svg+xml
|
Details | |
|
329 bytes,
image/svg+xml
|
Details | |
|
6.33 KB,
patch
|
jwatt
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
There are a number of cases where invalidation doesn't account for the space occupied by the filter.
Attachment #286172 -
Attachment description: test of removing filter from object - click on blurred black rect, should be replaced by black rect → test of removing filter from object - click on blurred black rect, should be replaced by red rect
Comment 8•18 years ago
|
||
Comment on attachment 286173 [details] [diff] [review]
fix filter invalidation problems
r=jwatt
> /*
> * Figures out the worst case invalidation area for a frame, taking
>- * into account filters. Empty return if no filter in the hierarchy.
>+ * into account filters.
s/into account filters/filters into account/ ?
Attachment #286173 -
Flags: review?(jwatt) → review+
Attachment #286173 -
Flags: superreview?(roc)
Attachment #286173 -
Flags: superreview?(roc) → superreview+
Checked in with suggested comment rewording. Testcases not checked in as reftests because we haven't figured out how to use the reftest framework to test paint invalidation issues.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Comment 10•16 years ago
|
||
It looks like the last testcase, 'test of removing filter from object - click on blurred black rect, should be replaced by black rect' has regressed.
When I click the blurred rect, I see a red rect with a blurred black border around it.
You need to log in
before you can comment on or make changes to this bug.
Description
•