Bug 401112 - filter paint invalidation problems.  r=jwatt, sr=roc